added only the minimum amount of code so i could test the communication between the clients and host

--- a/public/app.html
+++ b/public/app.html
@@ -11,6 +11,10 @@
       <button id="inviteCreator">Invite</button>
   		<input type="file" id="sessionLoader">
   	</div>
+    <div id="session_list">
+      <ul>
+      </ul>
+    </div>
     <div id="sessionSetup">
       <input type="text" id="sessionName">
       <button id="sessionStarter">Start</button>
