added basic messaging functionality

--- a/public/app.html
+++ b/public/app.html
@@ -11,9 +11,17 @@
       <button id="inviteCreator">Invite</button>
   		<input type="file" id="sessionLoader">
   	</div>
-    <div id="session_list">
+    <div id="sessionList">
       <ul>
       </ul>
+    </div>
+    <div id="chatSession">
+      <div id="messages">
+      </div>
+      <div id="speakerBox">
+        <input type="text" id="speaker">
+        <button id="messageSubmitter">Send</button>
+      </div>
     </div>
     <div id="sessionSetup">
       <input type="text" id="sessionName">
